# lerw

./: .gitignore  CMakeLists.txt  Makefile  README.md  default.nix  interface.py  plot.py  regression.py
.github/workflows/: test.yml
include/: array_point.hpp  concepts.hpp  config.hpp  directions.hpp  distributions.hpp  generator.hpp  hash_set.hpp  lattice.hpp  ldstepper.hpp  lerw.hpp  point.hpp  point_array.hpp  point_tuple.hpp  stepper.hpp  stopper.hpp  utils.hpp
src/: config.cpp  main.cpp  main_length.cpp  main_points.cpp
tests/: benchmarks.cpp  directions.cpp  distributions.cpp  generator.cpp  ldstepper.cpp  points.cpp  stopper.cpp  test.cpp  utils.cpp
